--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
-    "@types/node": "^17.0.21",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
     "autoprefixer": "^10.4.2",
+    "cors": "^2.8.5",
+    "express": "^4.17.3",
+    "fs": "*",
+    "mongodb": "^4.4.1",
     "postcss": "^8.4.8",
     "postcss-cli": "^9.1.0",
     "postcss-preset-env": "^7.4.2",
@@ -40,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.21"
   }
 }
