--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
     "react-dom": "^17.0.2",
     "react-scripts": "^5.0.0",
     "tailwindcss": "^3.0.23",
+    "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "nodemon ./server/index.ts"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -45,6 +47,7 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "^17.0.21"
+    "@types/node": "^17.0.21",
+    "nodemon": "^2.0.15"
   }
 }
