--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-scripts": "^5.0.0",
     "tailwindcss": "^3.0.23",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
