--- a/package.json
+++ b/package.json
@@ -21,8 +21,6 @@
     "react-dom": "^17.0.2",
     "react-scripts": "^5.0.0",
     "tailwindcss": "^3.0.23",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.2",
     "uuid": "^8.3.2"
   },
   "scripts": {
@@ -30,7 +28,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "nodemon ./server/index.ts"
+    "server": "nodemon ./server/app.ts"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -50,6 +48,8 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.21",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.2"
   }
 }
