--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
     "autoprefixer": "^10.4.2",
+    "axios": "^0.26.1",
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "fs": "*",
